--- a/ShapeLib/ShapeLib.vcxproj.filters
+++ b/ShapeLib/ShapeLib.vcxproj.filters
@@ -39,9 +39,36 @@
     <ClInclude Include="win32_rightColumn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_identifierShape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_infoShape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_coordShape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_individualShape.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_leftColumn.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_gridPointShape.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_rightColumn.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_shape.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_memorySlot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
