--- a/ShapeLib/ShapeLib.vcxproj.filters
+++ b/ShapeLib/ShapeLib.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="win32_memorySlot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="win32_infoShape.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
