--- a/HistoryTest/HistoryTest.vcxproj
+++ b/HistoryTest/HistoryTest.vcxproj
@@ -151,7 +151,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>History.lib;runtimeCPP.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>History.lib;runtimeCPP.lib;Utilities.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
