--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="Int24.h" />
     <ClInclude Include="kGridPoint.h" />
     <ClInclude Include="observerInterface.h" />
+    <ClInclude Include="pixel.h" />
     <ClInclude Include="pixelPoint.h" />
     <ClInclude Include="pixelRect.h" />
     <ClInclude Include="pixelRectSize.h" />
@@ -168,6 +169,7 @@
   <ItemGroup>
     <ClCompile Include="BoolOp.cpp" />
     <ClCompile Include="kGridPoint.cpp" />
+    <ClCompile Include="pixel.cpp" />
     <ClCompile Include="SmoothMove.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
