--- a/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj.filters
+++ b/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj.filters
@@ -49,5 +49,11 @@
     <ClInclude Include="gridPoint24.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="gridCoord.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="IndividualId.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
