--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="EventInterface.h" />
     <ClInclude Include="Int24.h" />
     <ClInclude Include="kGridPoint.h" />
+    <ClInclude Include="kGridRect.h" />
     <ClInclude Include="observerInterface.h" />
     <ClInclude Include="pixel.h" />
     <ClInclude Include="pixelPoint.h" />
@@ -169,6 +170,7 @@
   <ItemGroup>
     <ClCompile Include="BoolOp.cpp" />
     <ClCompile Include="kGridPoint.cpp" />
+    <ClCompile Include="kGridRect.cpp" />
     <ClCompile Include="pixel.cpp" />
     <ClCompile Include="SmoothMove.cpp" />
     <ClCompile Include="stdafx.cpp">
