--- a/EvolutionCore/EvolutionCore.vcxproj
+++ b/EvolutionCore/EvolutionCore.vcxproj
@@ -200,6 +200,7 @@
     <ClCompile Include="individual.cpp" />
     <ClCompile Include="interaction.cpp" />
     <ClCompile Include="PixelCore.cpp" />
+    <ClCompile Include="plannedActivity.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
