--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -148,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoolOp.h" />
+    <ClInclude Include="crtpType.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="EventInterface.h" />
     <ClInclude Include="Int24.h" />
@@ -159,6 +160,7 @@
     <ClInclude Include="pixelPoint.h" />
     <ClInclude Include="pixelRect.h" />
     <ClInclude Include="pixelRectSize.h" />
+    <ClInclude Include="PointType.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="SmoothMove.h" />
     <ClInclude Include="stdafx.h" />
