--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="pixelRectSize.h" />
     <ClInclude Include="PointType.h" />
     <ClInclude Include="random.h" />
+    <ClInclude Include="RectType.h" />
     <ClInclude Include="SmoothMove.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
