--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -156,10 +156,7 @@
     <ClInclude Include="kGridRect.h" />
     <ClInclude Include="NamedType.h" />
     <ClInclude Include="observerInterface.h" />
-    <ClInclude Include="pixel.h" />
-    <ClInclude Include="pixelPoint.h" />
-    <ClInclude Include="pixelRect.h" />
-    <ClInclude Include="pixelRectSize.h" />
+    <ClInclude Include="PixelTypes.h" />
     <ClInclude Include="PointType.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="RectType.h" />
