--- a/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj
+++ b/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="gridPoint24.h" />
     <ClInclude Include="gridRect.h" />
     <ClInclude Include="IndividualId.h" />
+    <ClInclude Include="kGridTypes.h" />
     <ClInclude Include="PixelCore.h" />
     <ClInclude Include="plannedActivity.h" />
     <ClInclude Include="EvolutionCoreWrapperHelpers.h" />
