--- a/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj.filters
+++ b/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj.filters
@@ -55,5 +55,8 @@
     <ClInclude Include="IndividualId.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="kGridTypes.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
