--- a/Evolution/MonitorConfigurations.cnf
+++ b/Evolution/MonitorConfigurations.cnf
@@ -128,3 +128,18 @@ MonitorConfiguration  "WindowConfiguration9.cnf"
 0    # secondary monitor
 0   # end of MonitorConfiguration
 
+MonitorConfiguration  "WindowConfiguration10.cnf"
+1   # monitor number
+0 0 2560 1440   # monitor rectangle
+0 0 2560 1400   # work area rectangle
+1    # primary monitor
+2   # monitor number
+3840 1064 6400 2144   # monitor rectangle
+3840 1064 6400 2104   # work area rectangle
+0    # secondary monitor
+3   # monitor number
+-1920 1064 0 2144   # monitor rectangle
+-1920 1064 0 2104   # work area rectangle
+0    # secondary monitor
+0   # end of MonitorConfiguration
+
