--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -1,19 +1,19 @@
 MoveWindow IDM_APPL_WINDOW  3832  1057  2576  1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_HIST_INFO  3857  1264   300   115
+MoveWindow IDM_HIST_INFO  3847  1246   300   115
 ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW  3840  1450   913   517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DISP_WINDOW  6176  1357   181   219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW  6053  1575   331   453
-ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_EDIT_WINDOW SW_HIDE
 MoveWindow IDM_CRSR_WINDOW  3846  1130   300   115
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_STAT_WINDOW  3840  1484   400   545
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW  3840  1450   300   130
-ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_PERF_WINDOW  3848  1359   300   130
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW  5968  1115   417   240
 ShowWindow IDM_MINI_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW  3840  1108  2560   975
