small improvements. Running.

--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -15,6 +15,6 @@ ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW  3848  1359   301   131
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW  5968  1115   417   240
-ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MINI_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW  3840  1108  2560   975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
