GraphicsInterface added. Only win32_gridWindow.cpp knows about D3D. Running.

--- a/Win32_utilities/Win32_utilities.vcxproj
+++ b/Win32_utilities/Win32_utilities.vcxproj
@@ -147,6 +147,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GraphicsInterface.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="win32_baseDialog.h" />
