--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -1,20 +1,20 @@
-MoveWindow IDM_APPL_WINDOW  3832  1057  2576  1056
+MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_HIST_INFO  3847  1246   301   116
+MoveWindow IDM_HIST_INFO 3847 1246 301 116
 ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
-MoveWindow IDM_CONS_WINDOW  3840  1450   913   517
+MoveWindow IDM_CONS_WINDOW 3840 1450 913 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DISP_WINDOW  6176  1357   181   219
+MoveWindow IDM_DISP_WINDOW 6176 1357 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_EDIT_WINDOW  6053  1575   331   453
-ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW  3846  1130   301   116
+MoveWindow IDM_EDIT_WINDOW 6053 1575 331 453
+ShowWindow IDM_EDIT_WINDOW SW_HIDE
+MoveWindow IDM_CRSR_WINDOW 3846 1130 301 116
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_STAT_WINDOW  3840  1484   401   546
+MoveWindow IDM_STAT_WINDOW 3840 1484 401 546
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW  3848  1359   301   131
-ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_MINI_WINDOW  5965  1090   417   240
+MoveWindow IDM_PERF_WINDOW 3848 1359 301 131
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW 5965 1090 417 240
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW  3840  1108  2560   975
+MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
