On the way to dynamic grid size. Static arrays are now vectors. Running. History window not visible. ??

--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -2,7 +2,7 @@ MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_HIST_INFO 3847 1246 301 116
 ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
-MoveWindow IDM_CONS_WINDOW 3840 1450 913 517
+MoveWindow IDM_CONS_WINDOW -1232 1269 913 503
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DISP_WINDOW 6176 1357 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
@@ -15,6 +15,6 @@ ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 3848 1359 301 131
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW 5965 1090 417 240
-ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MINI_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
