--- a/Win32_history/Win32_history.vcxproj
+++ b/Win32_history/Win32_history.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="win32_genDisplayWindow.h" />
+    <ClInclude Include="win32_historyInfo.h" />
     <ClInclude Include="win32_histWindow.h" />
   </ItemGroup>
   <ItemGroup>
@@ -161,6 +162,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="win32_genDisplayWindow.cpp" />
+    <ClCompile Include="win32_historyInfo.cpp" />
     <ClCompile Include="win32_histWindow.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
