--- a/EvolutionCore/EvolutionCore.vcxproj.filters
+++ b/EvolutionCore/EvolutionCore.vcxproj.filters
@@ -122,5 +122,8 @@
     <ClCompile Include="plannedActivity.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="GridDimensions.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
