--- a/EvolutionCore/EvolutionCore.vcxproj
+++ b/EvolutionCore/EvolutionCore.vcxproj
@@ -165,6 +165,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ActionOptions.h" />
     <ClInclude Include="EvolutionCoreImpl.h" />
     <ClInclude Include="gene.h" />
     <ClInclude Include="geneTypeLimits.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ActionOptions.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="dump.cpp" />
     <ClCompile Include="EvolutionCore.cpp" />
