fixed some bugs in T4T strategy. Running.

--- a/EvolutionCore/EvolutionCore.vcxproj
+++ b/EvolutionCore/EvolutionCore.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="EvolutionCore.cpp" />
     <ClCompile Include="EvolutionCoreImpl.cpp" />
     <ClCompile Include="EvolutionTypes.cpp" />
+    <ClCompile Include="EvoStatistics.cpp" />
     <ClCompile Include="food.cpp" />
     <ClCompile Include="GridDimensions.cpp" />
     <ClCompile Include="pixelCoordinates.cpp" />
