--- a/EvolutionCore/EvolutionCore.vcxproj.filters
+++ b/EvolutionCore/EvolutionCore.vcxproj.filters
@@ -131,5 +131,8 @@
     <ClCompile Include="ActionOptions.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="EvoStatistics.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
