--- a/EvolutionCore/EvolutionCore.vcxproj
+++ b/EvolutionCore/EvolutionCore.vcxproj
@@ -178,7 +178,7 @@
     <ClInclude Include="individual.h" />
     <ClInclude Include="interaction.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="strategy.h" />
+    <ClInclude Include="StrategyData.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -210,6 +210,7 @@
     <ClCompile Include="strategy.cpp" />
     <ClCompile Include="EvolutionCoreWrapperHelpers.cpp" />
     <ClCompile Include="EvolutionCoreWrappers.cpp" />
+    <ClCompile Include="StrategyData.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
