--- a/EvolutionCore/EvolutionCore.vcxproj.filters
+++ b/EvolutionCore/EvolutionCore.vcxproj.filters
@@ -137,5 +137,11 @@
     <ClCompile Include="StrategyData.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="GeneType.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="action.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
