--- a/EvolutionCore/EvolutionCore.vcxproj
+++ b/EvolutionCore/EvolutionCore.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="action.cpp" />
     <ClCompile Include="ActionOptions.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="dump.cpp" />
@@ -190,6 +191,7 @@
     <ClCompile Include="EvolutionTypes.cpp" />
     <ClCompile Include="EvoStatistics.cpp" />
     <ClCompile Include="food.cpp" />
+    <ClCompile Include="GeneType.cpp" />
     <ClCompile Include="GridDimensions.cpp" />
     <ClCompile Include="pixelCoordinates.cpp" />
     <ClCompile Include="genome.cpp" />
