--- a/Direct3D/Direct3D.vcxproj.filters
+++ b/Direct3D/Direct3D.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClInclude Include="targetver.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="d3d_buffer.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="d3d_indexBuffer.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
@@ -36,12 +33,12 @@
     <ClInclude Include="d3d_vertexBuffer.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="D3D_driver.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="d3d_buffer.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="d3d_indexBuffer.cpp">
@@ -51,6 +48,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="d3d_vertexBuffer.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="D3D_driver.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
