--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -7,14 +7,14 @@ ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DISP_WINDOW 6176 1357 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 6053 1575 331 453
-ShowWindow IDM_EDIT_WINDOW SW_HIDE
+ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW 3846 1130 301 116
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_STAT_WINDOW 3847 1365 401 701
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 6068 1151 301 131
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PERF_WINDOW SW_HIDE
 MoveWindow IDM_MINI_WINDOW 5965 1090 316 239
-ShowWindow IDM_MINI_WINDOW SW_HIDE
+ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
