SRW locks used, ReadBuffer. Running.

--- a/EvoWindows/EvoWindows.vcxproj.filters
+++ b/EvoWindows/EvoWindows.vcxproj.filters
@@ -143,5 +143,8 @@
     <ClInclude Include="win32_colorManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_readBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
