--- a/EvoWindows/EvoWindows.vcxproj
+++ b/EvoWindows/EvoWindows.vcxproj
@@ -181,6 +181,7 @@
     <ClInclude Include="win32_gridWindow.h" />
     <ClInclude Include="win32_histWrappers.h" />
     <ClInclude Include="win32_packGridPoint.h" />
+    <ClInclude Include="win32_readBuffer.h" />
     <ClInclude Include="win32_scriptHook.h" />
     <ClInclude Include="win32_statistics.h" />
     <ClInclude Include="win32_status.h" />
