--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -14,7 +14,7 @@ MoveWindow IDM_STAT_WINDOW 3850 1354 401 701
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 4157 1130 301 131
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 6075 1119 276 238
-ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW 6075 1119 316 239
+ShowWindow IDM_MINI_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
