Refactoring, architecture if HistSlot. Running.

--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -7,13 +7,13 @@ ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DISP_WINDOW 6176 1357 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 6053 1575 331 453
-ShowWindow IDM_EDIT_WINDOW SW_HIDE
+ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW 3851 1123 301 116
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_STAT_WINDOW 3850 1354 401 701
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 4157 1130 301 131
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PERF_WINDOW SW_HIDE
 MoveWindow IDM_MINI_WINDOW 6075 1119 316 239
 ShowWindow IDM_MINI_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
