--- a/Evolution/test_1.in
+++ b/Evolution/test_1.in
@@ -1,7 +1,7 @@
 PostRefresh
-PostSetBrushSize 6
+PostSetBrushRadius 6
 PostSetBrushIntensity 16
-PostSetBrushMode tBrushMode::randomStrategy
+PostSetBrushMode tBrushMode::randomStrat
 PostDoEdit   70  49 
 PostRefresh
 PostGenerationStep
