--- a/Evolution/Evolution.vcxproj
+++ b/Evolution/Evolution.vcxproj
@@ -224,7 +224,9 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Version.h" />
+    <ClInclude Include="win32_appMenu.h" />
     <ClInclude Include="win32_appWindow.h" />
+    <ClInclude Include="win32_evoController.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Evolution.cpp" />
@@ -234,7 +236,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="win32_appMenu.cpp" />
     <ClCompile Include="win32_appWindow.cpp" />
+    <ClCompile Include="win32_evoController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Evolution.rc" />
