--- a/Evolution/Evolution.rc
+++ b/Evolution/Evolution.rc
@@ -74,10 +74,33 @@ STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "Info über Evolution"
 FONT 8, "MS Shell Dlg", 0, 0, 1
 {
-    ICON            "", IDC_STATIC, 14, 14, 21, 20, SS_ICON, WS_EX_LEFT
-    LTEXT           VER_PRODUCTNAME_STR,  IDC_STATIC, 42, 14, 114,  8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
-    LTEXT           "Copyright (C) 2018", IDC_STATIC, 42, 26, 114,  8, SS_LEFT, WS_EX_LEFT
-    DEFPUSHBUTTON   "OK",                 IDOK,      113, 41,  50, 14, WS_GROUP, WS_EX_LEFT
+    ICON          "", IDC_STATIC, 14, 14, 21, 20, SS_ICON, WS_EX_LEFT
+    LTEXT         VER_PRODUCTNAME_STR,  IDC_STATIC, 42, 14, 114,  8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
+    LTEXT         "Copyright (C) 2018", IDC_STATIC, 42, 26, 114,  8, SS_LEFT, WS_EX_LEFT
+    DEFPUSHBUTTON "OK",                 IDOK,      113, 41,  50, 14, WS_GROUP, WS_EX_LEFT
+}
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDM_RESET_DIALOG DIALOGEX 0, 0, 170, 195
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+CAPTION "Reset options"
+FONT 8, "Ms Shell Dlg"
+{
+	AUTORADIOBUTTON "Clear grid, keep history",       IDM_RESET,            25, 14, 120,  8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
+	AUTORADIOBUTTON "Clear grid, delete history",     IDM_RESTART,          25, 34, 120,  8,                     0, WS_EX_LEFT
+	AUTORADIOBUTTON "Redefine grid, delete history ", IDM_CHANGE_GRID_TYPE, 25, 54, 120,  8,                     0, WS_EX_LEFT
+
+	LTEXT    "width",  IDC_STATIC,        38,  70, 20, 10
+	EDITTEXT IDM_CHANGE_GRID_TYPE_WIDTH,  60,  70, 30, 10, ES_NUMBER
+	LTEXT    "height", IDC_STATIC,        38,  90, 20, 10
+	EDITTEXT IDM_CHANGE_GRID_TYPE_HEIGHT, 60,  90, 30, 10, ES_NUMBER
+	LTEXT    "Grid type", IDC_STATIC,     38, 110, 30, 10
+
+	AUTORADIOBUTTON "Rectangular", IDM_GRID_TYPE_RECT,  38, 130, 120,  8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
+	AUTORADIOBUTTON "Hexagon",     IDM_GRID_TYPE_HEX, 38, 150, 120,  8,                     0, WS_EX_LEFT
+
+	DEFPUSHBUTTON "OK",     IDOK,     25, 170, 60, 14, WS_GROUP, WS_EX_LEFT
+	DEFPUSHBUTTON "Cancel", IDCANCEL, 95, 170, 60, 14, WS_GROUP, WS_EX_LEFT
 }
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
