--- a/Evolution/Evolution.rc
+++ b/Evolution/Evolution.rc
@@ -103,7 +103,7 @@ FONT 8, "Ms Shell Dlg"
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDD_DISPLAY_OPTIONS DIALOG 0, 0, 110, 111
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "Display options"
 FONT 8, "Ms Shell Dlg"
 {
@@ -117,7 +117,7 @@ FONT 8, "Ms Shell Dlg"
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDD_EDITOR DIALOG 0, 0, 210, 255
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "Editor"
 FONT 8, "Ms Shell Dlg"
 {
