--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -15,6 +15,6 @@ ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 6053 1575 331 453
 ShowWindow IDM_EDIT_WINDOW SW_HIDE
 MoveWindow IDM_MINI_WINDOW 6075 1119 316 239
-ShowWindow IDM_MINI_WINDOW SW_HIDE
+ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
