--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -1,20 +1,20 @@
-MoveWindow IDM_HIST_INFO 3850 1238 301 116
+MoveWindow IDM_HIST_INFO 4517 1238 301 116
 ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW -1002 1269 785 663
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 4149 1123 301 131
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
+MoveWindow IDM_PERF_WINDOW 4532 1100 301 131
+ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_APPL_WINDOW -8 -8 2576 1416
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_DISP_WINDOW 6176 1357 181 219
+MoveWindow IDM_DISP_WINDOW 3849 1320 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 3851 1123 301 116
+MoveWindow IDM_CRSR_WINDOW 4193 1074 301 116
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_STAT_WINDOW 3850 1354 401 701
+MoveWindow IDM_STAT_WINDOW 4212 1365 401 701
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_EDIT_WINDOW 6053 1575 331 453
-ShowWindow IDM_EDIT_WINDOW SW_HIDE
-MoveWindow IDM_MINI_WINDOW 6075 1119 316 239
+MoveWindow IDM_EDIT_WINDOW 3845 1553 331 453
+ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW 3847 1068 316 239
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
+MoveWindow IDM_MAIN_WINDOW 0 43 2560 1305
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
