--- a/Evolution/std_configuration.in
+++ b/Evolution/std_configuration.in
@@ -1,11 +1,9 @@
 # SetConfigValue Config::tId::moveEnabled 0
 # SetConfigValue Config::tId::marryEnabled 0
-# SetConfigValue Config::tId::fertilizeEnabled 0
+SetConfigValue Config::tId::fertilizeEnabled 0
 # SetConfigValue Config::tId::eatEnabled 0
-SetConfigValue Config::tId::energyConsumptionBasicRate 10
-SetConfigValue Config::tId::interactionPayOff_R  100
-SetConfigValue Config::tId::interactionPayOff_S -300
-SetConfigValue Config::tId::interactionPayOff_T  300
-SetConfigValue Config::tId::interactionPayOff_P    0
-# SetConfigValue Config::tId::nrOfHistorySlots 10
-# test
+SetConfigValue Config::tId::energyConsumptionBasicRate 50
+SetConfigValue Config::tId::interactionPayOff_R   60
+SetConfigValue Config::tId::interactionPayOff_S -400
+SetConfigValue Config::tId::interactionPayOff_T  400
+SetConfigValue Config::tId::interactionPayOff_P  -60
