Adapted test cases to new external GridPoint format (x/y).

--- a/EvolutionConsole/Test/Test_2.in
+++ b/EvolutionConsole/Test/Test_2.in
@@ -1,17 +1,11 @@
 #SetConfigValue Config::tId::nrOfHistorySlots 10
 #OpenTraceFile  "main_trace.out"
-PostRefresh
 PostSetBrushMode tBrushMode::randomStrat
-PostDoEdit   37  51  
-PostRefresh
-PostDoEdit   92  52 
-PostRefresh
-PostDoEdit  117  52 
-PostRefresh
-PostDoEdit  147  52 
-PostRefresh
-PostDoEdit  165  52 
-PostRefresh
+PostDoEdit  ( 37 / 51)  
+PostDoEdit  ( 92 / 52) 
+PostDoEdit  (117 / 52) 
+PostDoEdit  (147 / 52) 
+PostDoEdit  (165 / 52) 
 PostPrevGeneration
 PostGenerationStep
 PostPrevGeneration
