Refactoring to remove code smells with usage of ReadBuffer vs direct access to EvolutionCore. Running.

--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -1,6 +1,6 @@
 MoveWindow IDM_HIST_INFO 3840 1110 301 116
 ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
-MoveWindow IDM_CONS_WINDOW 1770 401 721 661
+MoveWindow IDM_CONS_WINDOW -923 1254 721 661
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 4148 1115 301 131
 ShowWindow IDM_PERF_WINDOW SW_HIDE
@@ -15,6 +15,6 @@ ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 6054 1601 331 453
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW 6070 1113 316 239
-ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MINI_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
